--- a/templates/page4.html
+++ b/templates/page4.html
@@ -144,8 +144,7 @@
         loading="lazy"
         allowfullscreen
         referrerpolicy="no-referrer-when-downgrade"
-        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCv1K6SJtkNQPIMrsUNyAfSM8C6ApitgYQ
-                &q=Space+Needle,Seattle+WA"
+        src=''
       >
       </iframe>
     </div>
